# plain-ds

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: file_tree_use.rs
src/: lib.rs
src/core/: error.rs  list.rs  mod.rs  utils.rs
src/core/node_one_link/: iter.rs  iter_mut.rs  merge_sort.rs  mod.rs
src/fast/: mod.rs
src/fast/list/: mod.rs  ordered_list.rs
src/fast/ordered_list/: impl_list.rs  into_iter.rs
src/light/: mod.rs
src/light/list/: into_iter.rs  iter.rs  merge_sort.rs  mod.rs  single_linked_list.rs
src/light/single_linked_list/: impl_list.rs  into_iter.rs
src/list/: api.rs  common.rs  list_api.rs  mod.rs  ordered.rs  singly_linked.rs  sorted.rs
src/list/node_one_link/: iter.rs  merge_sort.rs  mod.rs
src/list/ordered/: impl_list.rs  into_iter.rs  mod.rs
src/list/single_linked/: impl_list.rs  into_iter.rs  mod.rs
src/lite/: list.rs  mod.rs
src/lite/list/: error.rs  iter.rs  merge_sort.rs  mod.rs  node.rs  single_linked_list.rs
src/tree/: file_tree.rs  iter.rs  mod.rs  node.rs
src/tree/file_tree/: childs.rs  impl_tree.rs  iter.rs  mod.rs  node.rs
