[package]
name = "plain-ds"
version = "0.3.0"
edition = "2024"

authors = ["dvshapkin <dvshapkin@mail.ru>"]
description = "Plain data structures"
readme = "README.md"
license = "MIT"

documentation = "https://docs.rs/plain-ds"
homepage = "https://github.com/dvshapkin/plain-ds"
repository = "https://github.com/dvshapkin/plain-ds"

keywords = ["data-structures", "list", "tree"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false

[features]
default = ["tree"]
list = []
tree = []
full = ["list", "tree"]

[dev-dependencies]
drop-tracker = "0.1"
